# tmrf-in-memory

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
scripts/: download_data.py  reorganize_data.py
src/python/: cbir.py  experiments.py  extractor.py  main.py  metrics.py  tmrf.py
